Adding event keydown in the example

--- a/examples/public/js/app/components/checkLink/checkLink.template.html
+++ b/examples/public/js/app/components/checkLink/checkLink.template.html
@@ -12,5 +12,7 @@
 </div>
 
 <div class="otros" ex-click="{{ this.showMessage2('Funciona perfecto') }}">
-Holaaaa desde otros
+  Holaaaa desde otros
+
+  <input id="text" ex-keydown="{{ this.showMessage2('En el keydown') }}" />
 </div>
